--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"ejs": "^2.5.6",
 		"express": "^4.15.2",
 		"jquery": "^3.5.1",
+		"jsdom": "^16.4.0",
 		"mongodb": "^3.6.2",
 		"mongoose": "^5.10.9",
 		"multer": "^1.4.2",
