--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-f https://download.pytorch.org/whl/torch_stable.html
 ffmpeg-python>=0.2.0
 matplotlib>=3.0.2
 munkres>=1.1.2
@@ -5,6 +6,6 @@ numpy>=1.16
 opencv-python>=3.4
 Pillow>=5.4
 vidgear>=0.1.4
-torch>=1.4.0
-torchvision>=0.5.0
+torch>=1.4.0+cpu
+torchvision>=0.5.0+cpu
 tqdm>=4.26
