--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-http://download.pytorch.org/whl/cpu/torch-1.4.0-cp36-cp36m-linux_x86_64.whl
+-f https://download.pytorch.org/whl/torch_stable.html
 ffmpeg-python>=0.2.0
 matplotlib>=3.0.2
 munkres>=1.1.2
@@ -6,5 +6,6 @@ numpy>=1.16
 opencv-python>=3.4
 Pillow>=5.4
 vidgear>=0.1.4
+torch==1.4.0+cpu
 torchvision>=0.5.0+cpu
 tqdm>=4.26
