--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ numpy>=1.16
 opencv-python>=3.4
 Pillow>=5.4
 vidgear>=0.1.4
-torch>=1.4.0+cpu
-torchvision>=0.5.0+cpu
+torch=1.4.0+cpu
+torchvision=0.5.0+cpu
 tqdm>=4.26
