--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 -f https://download.pytorch.org/whl/torch_stable.html
 ffmpeg-python==0.2.0
-matplotlib>=3.0.2
+matplotlib==3.0.2
 munkres==1.1.2
 numpy==1.16
 opencv-python==3.4.10.37
-Pillow>=5.4
+Pillow==5.4
 vidgear==0.1.4
 torch==1.4.0+cpu
 torchvision==0.5.0+cpu
