--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
-    "python.autoComplete.extraPaths": [
-    
-    ],
-    "python.pythonPath": "C:\\Users\\bryan\\anaconda3\\python.exe"
+  "python.autoComplete.extraPaths": [],
+  "python.pythonPath": "C:\\Users\\bryan\\anaconda3\\python.exe",
+  "python.analysis.extraPaths": []
 }
